# department-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.template  pyproject.toml
src/department/: __init__.py
src/department/application/common/: application_error.py
src/department/application/common/const/: errors.py
src/department/application/common/dto/: __init__.py  department.py  employee.py
src/department/application/ports/: __init__.py  id_generator.py
src/department/domain/common/: domain_errors.py
src/department/domain/department/: entity.py  repository.py
src/department/domain/employee/: entity.py  repository.py
src/department/entrypoint/web/: __main__.py  application.py  cli.py
src/department/infrastructure/adapters/: __init__.py  id_generator.py  time_provider.py
src/department/infrastructure/mediator/: __init__.py  dishka.py  mediator.py  registry.py
src/department/presentation/cli/: __init__.py  migrations.py  server_start.py
src/department/presentation/controllers/: __init__.py  department.py  healthcheck.py
src/department/presentation/exceptions/: handlers.py  setup.py
src/department/presentation/schemas/: base.py
src/domain/common/: domain_errors.py
src/domain/common/const/: errors.py
src/domain/department/: department.py  repository.py
src/domain/department/const/: errors.py
src/domain/department/value_objects/: department_name.py
src/domain/employee/: employee.py  repository.py
src/domain/employee/const/: errors.py
src/domain/employee/value_object/: employee_name.py  position.py
(+66 files in other folders)
