[project]
name = "department"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.10.1",
    "fastapi>=0.136.1",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn>=0.47.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.13",
]

[project.scripts]
department-cli = "department.entrypoint.web.cli:main"

[tool.setuptools.package-data]
"department.infrastructure.persistence.alembic" = ["alembic.ini"]
